# fff-lang

./: .gitignore  .travis.yml  Cargo.toml  Issues  README  README.md  ReadMe.md  ReleaseNote.md  Specification  code
.cargo/: config  config.toml
codemap/: Cargo.toml
codemap/src/: code_char.rs  code_file.rs  error.rs  lib.rs  position.rs  span.rs  src_code.rs  symbol_def.rs
codepos/: Cargo.toml  lib.rs
codepos/src/: lib.rs
compiler/: lex.f3  token.f3
docs/: attribute.md  bits-type.md  block-label.md  block-lable.md  calculated-property.md  enum.md  file-level-physical-arch.md  fn-overloading.md  inc-dec.md  iterator.md  lang-feature-from-std.md  let-in.md  module-library.md  module-system.md  name-module.md  name-resolve.md  range-expr.md  rational-type.md  resolve-passes.md  semantic-analyze.md  static-reflect.md  string-literal.md  syntax-design-refactor.md  syntax-removes.md  trait.md  type-cast-syntax-remove.md  type_cast_syntax.md
docs/internal/: 2022-continue.md  ast-memory.md  (+10 more)
driver/: Cargo.toml  test-build-pc.bat
driver/src/: common.rs  config.rs  driver.rs  lib.rs  main.rs  message.rs
driver/src/codegen/: block.rs  expression.rs  fn_def.rs  mod.rs  session.rs  statement.rs  type_def.rs  var_def.rs  vm_code.rs
driver/src/lexical/: buf_lexer.rs  mod.rs
driver/src/lexical/symbol_type/: char_literal.rs  literal.rs  numeric_literal.rs  string_literal.rs
driver/src/lexical/v0lexer/: mod.rs
driver/src/lexical/v1lexer/: char_lit_parser.rs  escape_char_parser.rs  mod.rs  raw_string_lit_parser.rs  string_lit_parser.rs
driver/src/lexical/v2lexer/: mod.rs  numeric_lit_parser.rs
driver/src/lexical/v3lexer/: mod.rs
driver/src/lexical/v4lexer/: mod.rs
driver/src/syntax/: ast_item.rs  block.rs  function_def.rs  mod.rs  program.rs  smtype.rs
driver/src/syntax/expression/: binary.rs  d3.rs  mod.rs  postfix.rs  primary.rs  unary.rs
driver/src/syntax/statement/: expr_stmt.rs  for_stmt.rs  if_stmt.rs  jump_stmt.rs  loop_stmt.rs  mod.rs  var_decl.rs  while_stmt.rs
driver/src/vm/: builtin_impl.rs  mod.rs  runtime.rs  vm_impl.rs
ffc/: Cargo.toml  config.rs  main.rs
lexical/: Cargo.toml
lexical/src/: buf_lexer.rs  lib.rs  parse_sess.rs  test_helper.rs  token_buf.rs  token_stream.rs
lexical/src/symbol_type/: char_literal.rs  keyword.rs  literal.rs  mod.rs  seperator.rs  string_literal.rs
lexical/src/token_def/: keyword.grammar  keyword.rs  keyword2.rs  lit_value.rs  mod.rs  num_lit_value.rs  seperator.grammar  seperator.rs  seperator2.rs  str_lit_value.rs  token.grammar  token.py
lexical/src/v0lexer/: mod.rs
lexical/src/v1lexer/: char_lit_parser.rs  error_strings.rs  escape_char_parser.rs  mod.rs  raw_string_lit_parser.rs  string_lit_parser.rs
lexical/src/v2lexer/: error_strings.rs  mod.rs  num_lit_parser.rs  numeric_lit_parser.rs  unicode_char.rs
lexical/src/v3lexer/: mod.rs  unicode_char.rs
lexical/src/v4lexer/: mod.rs
lexical_pos/: Cargo.toml
messages/: Cargo.toml  lib.rs
pefile/: Cargo.toml
scripts/: __init__.py  ast.py  ast.txt  build_performance.md  bump-version.py  clean-all.py  common.py  count-line  diagnostics.py  diagnostics.txt  gen_expr_random_test.py  grammar.ebnf  grammar.py  grammar.txt  grammar.txt.output  learn-error  make-ast-expect.py  make-ast-mem.py  make_build_perfomance.py  rain.py  randinput.py  ref2span.py  test_performance.txt  token-keyword.txt  token-separator.txt  token.py  unicode.py
semantic/: Cargo.toml
src/: common.rs  config.rs  driver.rs  lib.rs  main.rs  message.rs  position.rs
stdlib/: std.ff
syntax/: Cargo.toml
syntax/src/: ast_item.rs  block.rs  format_helper.rs  function_def.rs  label_def.rs  lib.rs  parse_sess.rs  program.rs  smtype.rs  syntax_tree.rs  test_helper.rs  traits.rs  type_use.rs
syntax/src/expr/: array_def.rs  binary.rs  binary_expr.rs  common.rs  expr_list.rs  fn_call.rs  ident_expr.rs  index_call.rs  lit_expr.rs  member_access.rs  mod.rs  name.rs  postfix.rs  primary.rs  priority_proxy.rs  range_expr.rs  tuple_def.rs  unary.rs  unary_expr.rs
syntax/src/expression/: binary.rs  d3.rs  mod.rs  postfix.rs  primary.rs  unary.rs
syntax/src/items/: block.rs  fn_def.rs  function_def.rs  label_def.rs  mod.rs  module.rs  name.rs  syntax_tree.rs  type_def.rs  type_use.rs
syntax/src/new_expr/: binary_exprs.rs  mod.rs
syntax/src/statement/: block_stmt.rs  expr_stmt.rs  for_stmt.rs  if_stmt.rs  import_stmt.rs  jump_stmt.rs  loop_stmt.rs  mod.rs  ret_stmt.rs  use_stmt.rs  var_decl.rs  while_stmt.rs
temp/: Issues  basic.stderr  basic_all.stderr  error-count-symid-refac.txt  gcd.stderr  gcd.stdout  lh.stderr  lh.stdout  prime.stderr  prime.stdout  something.stderr
tests/: sum.sm
util/: Cargo.toml  date_time.rs  lib.rs
(+441 files in other folders)
