[package]
name = "fff-lang"
version = "0.2.0"
edition = "2021"

[lib]
name = "fflib"
doctest = false

[[bin]]
# main command line interface
# you can run it with `cargo rc -- [OPTIONS] [file name]` (rc: run compiler)
name = "ffc"
# it is a simple stub and has no unit tests
test = false

[[bin]]
# compiler intergration test
# you can run it with `cargo rt [test file name]` (rt: run test)
name = "ct"
# it is a simple stub and has no unit tests
test = false
# required-features = ["compiler_test"]

[features]
compiler_test = []
