[package]
name = "driver"
version = "0.1.2"
authors = ["FreskyZ <fresky7@outlook.com>"]
workspace = "../ffc"

[dependencies]
lexical = { path = "../lexical" }
codemap = { path="../codemap" }
codepos = { path="../codepos" }
util = { path="../util" }
messages = { path = "../messages" }
syntax = { path = "../syntax" }

[lib]
name = "driver"
path = "src/lib.rs"