[package]
name = "driver"
version = "0.1.3"
authors = ["FreskyZ <FreskyZ@outlook.com>"]
edition = "2018"

[dependencies]
lexical = { path = "../lexical" }
codemap = { path="../codemap" }
util = { path="../util" }
messages = { path = "../messages" }
syntax = { path = "../syntax" }
semantic = { path = "../semantic" }

[lib]
name = "driver"
path = "src/lib.rs"
