[package]
name = "driver"
version = "0.1.3"
edition = "2021"

[dependencies]
lexical = { path = "../lexical" }
codemap = { path="../codemap" }
util = { path="../util" }
messages = { path = "../messages" }
syntax = { path = "../syntax" }
semantic = { path = "../semantic" }

[lib]
name = "driver"
path = "src/lib.rs"
