[package]
name = "lexical"
version = "0.1.2"
authors = ["FreskyZ <fresky7@outlook.com>"]
workspace = "../ffc"

[dependencies]
util = { path = "../util" }
codepos = { path = "../codepos" }
codemap = { path = "../codemap" }
messages = { path = "../messages" }

[features]
trace_num_lit_parse = []