[package]
name = "lexical"
version = "0.1.3"
authors = ["FreskyZ <FreskyZ@outlook.com>"]
edition = "2018"

[dependencies]
util = { path = "../util" }
codemap = { path = "../codemap" }
messages = { path = "../messages" }

[features]
trace_num_lit_parse = []
trace_v2_parse = []
trace_char_lit_parse = []
