[package]
name = "syntax"
version = "0.1.2"
authors = ["FreskyZ <fresky7@outlook.com>"]

[dependencies]
util = { path = "../util" }
codepos = { path = "../codepos" }
messages = { path = "../messages" }
lexical = { path = "../lexical" }

[features]
trace_primary_expr_parse = []
trace_postfix_expr_parse = []