[package]
name = "syntax"
version = "0.1.2"
authors = ["FreskyZ <fresky7@outlook.com>"]
workspace = "../ffc"

[dependencies]
util = { path = "../util" }
codemap = { path = "../codemap" }
messages = { path = "../messages" }
lexical = { path = "../lexical" }

[features]
trace_primary_expr_parse = []
trace_postfix_expr_parse = []
trace_binary_expr_parse = []
trace_fn_def_parse = []
integration_test = []